# ProjectCollie

./: .gitignore  LICENSE  README.md
.github/workflows/: build_and_coveralls.yml
panda_arm/: CMakeLists.txt  package.xml
panda_controller/: CMakeLists.txt  package.xml
panda_controller/coverage_report/: index-sort-f.html  index-sort-l.html  index.html
panda_controller/coverage_report/home/manu/ws2/install/panda_world/include/panda_world/panda_world/msg/detail/: block_location__struct.hpp.func-sort-c.html  block_location__struct.hpp.func.html  block_location__struct.hpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  multi_block_location__struct.hpp.func-sort-c.html  multi_block_location__struct.hpp.func.html  multi_block_location__struct.hpp.gcov.html
panda_controller/coverage_report/src/: img_stack.cpp.func-sort-c.html  img_stack.cpp.func.html  img_stack.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  motion_stack.cpp.func-sort-c.html  motion_stack.cpp.func.html  motion_stack.cpp.gcov.html
panda_controller/coverage_report/test/: index-sort-f.html  index-sort-l.html  index.html  main.cpp.func-sort-c.html  main.cpp.func.html  main.cpp.gcov.html  test.cpp.func-sort-c.html  test.cpp.func.html  test.cpp.gcov.html
panda_controller/doc/: default_config
panda_controller/doc/html/: graph_legend.html  index.html
panda_controller/doc/latex/: refman.tex
panda_controller/include/panda_controller/: img_stack.hpp  motion_node.cpp  motion_stack.hpp  motion_stack_node.hpp
panda_controller/launch/: controller.launch.py  gazebo.launch.py  robot.launch.py
panda_controller/results/: cppcheck.txt  cpplint.txt
panda_controller/scripts/: generate_coverage_report.bash
panda_controller/src/: img_node.cpp  img_stack.cpp  motion_node.cpp  motion_stack.cpp  motion_stack_node.cpp  test.cpp
panda_controller/test/: main.cpp  test.cpp
panda_description/: CMakeLists.txt  LICENSE  package.xml
panda_description/config/: controllers_effort.yaml  controllers_position.yaml  controllers_velocity.yaml  joint_limits.yaml
panda_description/launch/: robot_state_publisher.launch.py  simulation.launch.py  visualize.launch.py
panda_description/urdf/: inertial.yaml  panda.urdf.xacro  panda_arm.xacro  panda_hand.xacro  panda_robot.xacro  utils.xacro
panda_moveit_config/: .setup_assistant  package.xml
panda_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  panda.ros2_control.xacro  panda.srdf  panda.urdf.xacro  ros2_controllers.yaml
panda_moveit_config/launch/: gazebo.launch.py
panda_world/: CMakeLists.txt  package.xml
panda_world/models/arm_mount/: model.config  model.sdf
panda_world/models/kit_bin/: model.config  model.sdf
panda_world/models/table/: model.sdf
panda_world/models/table_1/: model.config  model.sdf
panda_world/urdf/: camera.urdf.xacro  unit_box.urdf.xacro  unit_box.xacro
panda_world/worlds/: kitting.world
